@@ -1012,54 +1012,47 @@ double _zetav_from_Te_Parent2024(double Te){
   double zetav;
   double Te_control[] = 
   { 
-	3000,
-	3945.538502,
-	5052.610188,
-	6437.030021,
-	7821.449854,
-	10451.03522,
-	12486.46891,
-	16037.45356,
-	20458.77759,
-	27537.53784,
-	33745.95872,
-	44364.0991,
-	56769.33633,
-	70926.85684,
-	78899.16552,
-	89528.91042,
-	100158.6553,
-	119642.6528,
-	150626.7346,
-	232090.5001,
-	288952.6727,
-	3000000.000
-
+	3000.0,
+	5053.0,
+	6437.0,
+	10451.0,
+	12486.0,
+	16037.0,
+	28431.0,
+	44364.0,
+	56769.0,
+	70927.0,
+	89529.0,
+	100159.0,
+	119643.0,
+	150627.0,
+	186021.0,
+	232091.0,
+	345815.0,
+	630010.0,
+	3000000.0
   };
   double zetav_control[] = 
   {
-	0.785926661,
-	0.802053062,
-	0.811535806,
-	0.827959212,
-	0.86033304,
-	0.941075705,
-	0.989502763,
-	0.982456497,
-	0.978987544,
-	0.970659412,
-	0.951327832,
-	0.85010931,
-	0.607349465,
-	0.315364873,
-	0.205844146,
-	0.117755078,
-	0.07092433,
-	0.032143243,
-	0.01202112,
-	0.001500938,
-	0.001174743,
-	0.0000
+	0.7859,
+	0.8115,
+	0.828,
+	0.9411,
+	0.9895,
+	0.9825,
+	0.9689,
+	0.8501,
+	0.6073,
+	0.3154,
+	0.1178,
+	0.0709,
+	0.0321,
+	0.012,
+	0.0039,
+	0.0015,
+	0.001,
+	0.0006,
+	0.0
   };  
   int N = sizeof(Te_control)/sizeof(Te_control[0]);
   Te=min(Te_control[N-1],max(Te,Te_control[0]));
