@@ -1,1 +1,1 @@
-#define VERSION "24jun07b"
+#define VERSION "24jun07c"
